(fix): remove blue highlight on mobile

--- a/Cattown/src/index.css
+++ b/Cattown/src/index.css
@@ -32,3 +32,8 @@ html {
 a {
   font-size: 22px;
 }
+
+button,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
